// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-3o8ugv {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-3o8ugv"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size rounded 1`] = `
<DocumentFragment>
  .cache-1uhlju0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  border-radius: 8px;
  font-size: 10px;
  height: 16px;
  padding: 2px 6px;
  text-transform: uppercase;
}

<span
    class="egvl2gp0 cache-1uhlju0"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-h7rb7c {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<span
    class="egvl2gp0 cache-h7rb7c"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size xsmall 1`] = `
<DocumentFragment>
  .cache-14pb4du {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  border-radius: 4px;
  font-size: 12px;
  line-height: 18px;
  height: 18px;
}

<span
    class="egvl2gp0 cache-14pb4du"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size xxsmall 1`] = `
<DocumentFragment>
  .cache-h68942 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  border-radius: 4px;
  font-size: 10px;
  line-height: 16px;
  height: 16px;
  padding: 0 6px;
}

<span
    class="egvl2gp0 cache-h68942"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant beta 1`] = `
<DocumentFragment>
  .cache-13qr8dy {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ff8c69;
  color: #fff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="beta"
    class="egvl2gp0 cache-13qr8dy"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant error 1`] = `
<DocumentFragment>
  .cache-oh3v7x {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="error"
    class="egvl2gp0 cache-oh3v7x"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-1setccw {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #3f6ed8;
  color: #fff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="info"
    class="egvl2gp0 cache-1setccw"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-beta 1`] = `
<DocumentFragment>
  .cache-wlk06h {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #ff8c69;
  background-color: #ffefe6;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="beta"
    class="egvl2gp0 cache-wlk06h"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-error 1`] = `
<DocumentFragment>
  .cache-154mf9y {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #ef5774;
  background-color: #ffe1e7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="error"
    class="egvl2gp0 cache-154mf9y"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-info 1`] = `
<DocumentFragment>
  .cache-1vzg6s6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #3f6ed8;
  background-color: #e4edff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="info"
    class="egvl2gp0 cache-1vzg6s6"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-neutral 1`] = `
<DocumentFragment>
  .cache-3o8ugv {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-3o8ugv"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-primary 1`] = `
<DocumentFragment>
  .cache-oqy064 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4f0599;
  background-color: #eeeeff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-oqy064"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-success 1`] = `
<DocumentFragment>
  .cache-1dibq65 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #45d6b5;
  background-color: #cdfcf1;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="success"
    class="egvl2gp0 cache-1dibq65"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-3o8ugv {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-3o8ugv"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-auqzur {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #4f0599;
  color: #fff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-auqzur"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-1hatzbx {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #45d6b5;
  color: #fff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="success"
    class="egvl2gp0 cache-1hatzbx"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-oh3v7x {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="warning"
    class="egvl2gp0 cache-oh3v7x"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-3o8ugv {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4a4f62;
  background-color: #d4dae7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-3o8ugv"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;
